Color contrast changes fixed

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -97,7 +97,7 @@ h4 {
 h5 {
   font-family: $primary-bold;
   font-size: $type-size-7;
-  color: $btn-hover;
+  color: $dark-text;
   letter-spacing: .063em;
 }
 
