--- a/_sass/pages/_shared.scss
+++ b/_sass/pages/_shared.scss
@@ -77,7 +77,6 @@
   left: 0;
   z-index: 2;
   transition: $global-transition;
-
   &:hover {
     color: $white;
 
@@ -223,6 +222,7 @@
 .inner-banner {
   margin: 0 15px 2rem;
   min-height: 300px;
+  background-color: $black;
   @include media-breakpoint-up(md) {
     width: calc(100% - 100px);
     margin: 0 auto 2rem;
